2003-05-15  Thomas Pfaff  <tpfaff@gmx.net>

	* thread.h (pthread::init_mainthread): Remove function parameter.
	(MTinterface::Init): Ditto.
	* thread.cc (MTinterface::Init): Remove function parameter.
	Always initialize reent_key.
	(pthread::init_mainthread): Remove function parameter.
	(MTinterface::fixup_after_fork): Fix pthread::init_mainthread call.
	* dcrt0.cc (dll_crt_0_1) Fix calls to MTinterface::Init and
	pthread::init_mainthread.
	Call pthread::init_mainthread only when not forked.
	
2003-05-15  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_proc.cc (format_proc_meminfo): Make swap memory output
	Linux style values.

2003-05-13  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/config.h: Define __USE_INTERNAL_STAT64 appropriately.

2003-05-12  Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in (CYGWIN_START): Define as crt0.o.  Add to TARGET_LIBS.
	* fhandler.h (fhandler_virtual::fstat): Remove useless declaration.
	* fhandler_virtual.cc: Remove _COMPILING_NEWLIB define.
	* ipc.cc (ftok): Use stat64.
	* syscalls.cc (_fstat64): Remove alias.
	(_fstat): Ditto.
	(_stat): Ditto.
	(_fstat64_r): New function.
	(_fstat_r): Ditto.
	(_stat64_r): Ditto.
	(stat_r): Ditto.
	* crt0.o: New file, moved from newlib.
	* include/sys/param.h: Ditto.
	* include/sys/utime.h: Ditto.
	* include/sys/utmp.h: Ditto.
	* include/sys/dirent.h: Ditto.  Expose different struct dirent,
	dependening of the environment.

2003-05-11  Corinna Vinschen  <corinna@vinschen.de>

	Replace ino_t by __ino64_t throughout.

2003-05-11  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/types.h: Add key_t typedef.

2003-05-10  Christopher Faylor  <cgf@redhat.com>

	* dir.cc (readdir): Fill out new old_d_ino field.
	* fhandler.h (fhandler_base::namehash): Define as ino_t.
	(fhandler_base::get_namehash): Ditto.
	* fhandler_disk_file.cc (fhandler_disk_file::fstat_helper): Accommodate
	new 64 bit st_ino.
	* fhandler_socket.cc (fhandler_socket::fstat): Ditto.